# dou-chat

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: auth.py  main.py
dags/: dou_ingest_daily.py
evaluation/: metrics.py  test_queries.py  trulens_eval.py
indexing/: chunker.py  embedder.py  store.py
ingestion/: dou_client.py  parser.py  pipeline.py  scheduler.py
observability/: setup.py
rag/: engine.py  prompts.py
tests/: run_trulens_eval.py  test_llm_connectivity.py
