[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-diario-oficial"
version = "0.1.0"
description = "Semantic search and Q&A over Brazil's Diário Oficial da União using RAG"
requires-python = ">=3.11"

dependencies = [
    # RAG framework
    "llama-index>=0.12",
    "llama-index-llms-gemini>=0.4",
    "llama-index-embeddings-gemini>=0.3",
    "llama-index-vector-stores-duckdb>=0.3",

    # Embeddings (local inference)
    "sentence-transformers>=3.0",

    # LLM
    "google-generativeai>=0.8",

    # Vector store (MotherDuck via native duckdb)
    "duckdb>=1.1",

    # Observability
    "arize-phoenix>=4.0",
    "openinference-instrumentation-llama-index>=3.0",
    "opentelemetry-sdk>=1.25",

    # Evaluation
    "trulens>=1.0",
    "trulens-providers-litellm>=1.0",

    # Frontend
    "streamlit>=1.40",
    "streamlit-google-auth>=1.0",

    # Utilities
    "httpx>=0.27",
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "schedule>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "ipykernel>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "indexing", "rag", "observability", "evaluation", "app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
